--- a/02.Project/ecommerce-app/src/app/components/products/search-products/search-products.component.html
+++ b/02.Project/ecommerce-app/src/app/components/products/search-products/search-products.component.html
@@ -1,26 +1,26 @@
 <div class="relative">
-  <div class="shadow-lg border-b sticky top-0 z-50 p-4 bg-gray-900 backdrop-blur-md ">
-    <div class="max-w-6xl mx-auto">
-      <form [formGroup]="searchProductForm" class="flex gap-2 items-center">
-        <div class="flex gap-2 items-center h-10 w-auto relative -left-18 cursor-pointer" [routerLink]="['/products']">
+  <div class="shadow-lg border-b sticky top-0 z-50 p-3 sm:p-4 bg-gray-900 backdrop-blur-md ">
+    <div class="max-w-4xl lg:max-w-6xl lg:mx-auto">
+      <form [formGroup]="searchProductForm" class="flex flex-col md:flex-row gap-2 sm:gap-3 items-stretch sm:items-center">
+        <div class="flex gap-2 lg:gap-2 items-center lg:items-center h-10 lg:h-10 lg:w-auto lg:relative left-8 lg:-left-18 cursor-pointer" [routerLink]="['/products']">
           <img src="images-2/upc.png" alt="TechNova" class="h-10 w-auto">
           <p class="text-3xl text-white">Tech<span class="text-3xl font-semibold text-blue-500">Nova</span></p>
         </div>
         @if(router.url==='/products'){
-          <button [routerLink]="['/']" class="flex bg-blue-500 hover:bg-blue-700 text-white font-medium py-2 px-5 rounded-md -ml-10">
+          <button [routerLink]="['/']" class="flex bg-blue-500 hover:bg-blue-700 justify-center lg:justify-start text-white font-medium py-2 px-5 rounded-md lg:-ml-10 md:ml-10 mt-5 md:mt-0 ">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
               <path stroke-linecap="round" stroke-linejoin="round" d="m2.25 12 8.954-8.955c.44-.439 1.152-.439 1.591 0L21.75 12M4.5 9.75v10.125c0 .621.504 1.125 1.125 1.125H9.75v-4.875c0-.621.504-1.125 1.125-1.125h2.25c.621 0 1.125.504 1.125 1.125V21h4.125c.621 0 1.125-.504 1.125-1.125V9.75M8.25 21h8.25" />
             </svg>
-            <span class="ml-3">Inicio</span>
+            <span class="lg:ml-3">Inicio</span>
           </button>
         }
 
-        <div class="flex-1 relative ml-9">
+        <div class="lg:flex-1 mb-5 mt-5 md:mt-0 md:mb-0 lg:relative md:ml-10 lg:ml-9">
           <input
             type="text"
             formControlName="q"
             placeholder="Buscar productos..."
-            class="w-full px-4 py-3 border-2 placeholder-gray-400 border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 text-lg text-white"
+            class="w-full px-4 py-3 border-2 placeholder-gray-400 border-gray-300 rounded-lg focus:ring-2 focus:ring-blue-500 text-lg text-white md:pr-18 lg:pr-0"
           />
         </div>
         <!--
