--- a/02.Project/ecommerce-app/src/app/pages/home/home.component.html
+++ b/02.Project/ecommerce-app/src/app/pages/home/home.component.html
@@ -4,26 +4,24 @@
     alt="Fondo de gadgets tecnológicos"
     class="fixed inset-0 w-full h-screen object-cover z-0"
   >
-  <div class="relative h-screen text-left py-55 -ml-80 ">
-    <h1 class="text-6xl md:text-6xl font-extrabold text-white drop-shadow-lg tracking-tight text-left">
+  <div class="relative h-screen flex flex-col justify-center px-2 text-center sm:px-2 md:px-4 xl:-ml-80 xl:py-55  lg:text-left">
+    <h1 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl xl:text-6xl font-extrabold text-white drop-shadow-lg tracking-tight leading-tight">
       La mejor tecnología al mejor precio
     </h1>
-    <h3 class="mt-4 text-lg md:text-2xl text-gray-200 font-medium leading-relaxed py-5">
+    <h3 class="mt-3 sm:mt-4 xl:mt-4 text-base sm:text-lg md:text-xl lg:text-2xl text-gray-200 font-medium leading-relaxed xl:py-5">
       Descubre nuestros últimos productos y ofertas exclusivas
     </h3>
-    <button class="mt-6 inline-block bg-blue-600 hover:bg-blue-700 text-white text-base  px-6 py-3 rounded-lg shadow-md transition duration-300 ease-in-out cursor-pointer" [routerLink]="['/products']">
-      Ver Productos
-    </button> 
+    <div class="flex justify-center lg:justify-start">
+      <button class="mt-4 sm:mt-6 inline-block bg-blue-600 hover:bg-blue-700 text-white text-sm sm:text-base px-5 sm:px-6 py-2.5 sm:py-3 rounded-lg shadow-md transition duration-300 ease-in-out cursor-pointer" [routerLink]="['/products']">
+        Ver Productos
+      </button>
+    </div>
   </div>
 </div>
-<div>
-    <h2 class="text-7xl md:text-5xl font-extrabold text-white drop-shadow-lg tracking-tight text-center mb-20">
+  <div class="mx-auto pb-10 bg-gray-900 pt-12 sm:pt-16 md:pt-20">
+    <h2 class="text-2xl sm:text-3xl md:text-4xl lg:text-5xl xl:text-5xl font-extrabold text-white drop-shadow-lg tracking-tight leading-tight text-center mb-8 sm:mb-12 md:mb-16 lg:mb-20 px-4">
       Conoce nuestros productos estrella del mes
     </h2>
-  </div>
-
-  <div class="mx-auto pb-10">
-          <!-- {{title}} -->
           @if (imagesForCarousel.length > 0) {
                 <app-carousel
                     [images]="imagesForCarousel" [autoPlay]="autoPlay"
@@ -37,6 +35,7 @@
                     <p class="text-gray-500">Cargando productos...</p>
                 </div>
             }
+  </div>
 <!--
           <button
             class="absolute bottom-6 right-12 z-20 bg-white/90 hover:bg-white text-gray-700 hover:text-gray-900 p-2 rounded-full shadow-lg transition-all duration-200 hover:scale-110"
